--- a/ReactWithDotNet.WebSite/ReactWithDotNet.WebSite.csproj
+++ b/ReactWithDotNet.WebSite/ReactWithDotNet.WebSite.csproj
@@ -7,6 +7,10 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <None Include="wwwroot\clr.js" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="HtmlAgilityPack" Version="1.11.66" />
 		<PackageReference Include="YamlDotNet" Version="16.1.3" />
 		<PackageReference Include="Microsoft.CodeAnalysis.Compilers" Version="4.11.0" />
