--- a/ReactWithDotNet/ReactWithDotNet.csproj
+++ b/ReactWithDotNet/ReactWithDotNet.csproj
@@ -23,15 +23,10 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <None Remove="UIDesigner\Resources\Class.svg" />
-      <None Remove="UIDesigner\Resources\Method.svg" />
-      <None Remove="UIDesigner\Resources\Namespace.svg" />
-    </ItemGroup>
-
-    <ItemGroup>
       <EmbeddedResource Include="UIDesigner\Resources\Class.svg" />
       <EmbeddedResource Include="UIDesigner\Resources\Method.svg" />
       <EmbeddedResource Include="UIDesigner\Resources\Namespace.svg" />
+      <EmbeddedResource Include="UIDesigner\Resources\ComponentIndicator.js" />
     </ItemGroup>
 
     <ItemGroup>
