--- a/ReactWithDotNet/JsClientEngine/package.json
+++ b/ReactWithDotNet/JsClientEngine/package.json
@@ -3,8 +3,8 @@
     "version": "1.0.0",
     "scripts": {
 
-        "dev":   "if exist dist (rmdir /s /q dist) && esbuild index.jsx --bundle --splitting --format=esm --outdir=dist",
-        "build": "if exist dist (rmdir /s /q dist) && esbuild index.jsx --bundle --splitting --format=esm --outdir=dist --analyze --minify --target=es2016"
+        "dev":   "esbuild index.jsx --bundle --splitting --format=esm --outdir=dist",
+        "build": "esbuild index.jsx --bundle --splitting --format=esm --outdir=dist --analyze --minify --target=es2016"
     },
     "dependencies": {
 
