--- a/ReactWithDotNet/JsClientEngine/package.json
+++ b/ReactWithDotNet/JsClientEngine/package.json
@@ -17,6 +17,7 @@
         "react-transition-group": "^4.4.5",
 
         "@mui/material": "^6.2.0",
+        "@mui/icons-material": "^6.4.2",
         "@emotion/react": "^11.14.0",
         "@emotion/styled": "^11.14.0",
 
