--- a/ReactWithDotNet/JsClientEngine/package.json
+++ b/ReactWithDotNet/JsClientEngine/package.json
@@ -8,9 +8,9 @@
     },
     "dependencies": {
 
-        "esbuild": "^0.24.0",
+        "esbuild": "^0.25.0",
         "install": "^0.13.0",
-        "npm": "^10.9.2",
+        "npm": "11.1.0",
 
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
