--- a/ReactWithDotNet.SourceGenerator/ReactWithDotNet.SourceGenerator.csproj
+++ b/ReactWithDotNet.SourceGenerator/ReactWithDotNet.SourceGenerator.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.11.0" />
+    <PackageReference Include="YamlDotNet" Version="16.3.0" />
   </ItemGroup>
 
 </Project>
