--- a/ReactWithDotNet/JsClientEngine/package.json
+++ b/ReactWithDotNet/JsClientEngine/package.json
@@ -16,6 +16,8 @@
         "react-dom": "^18.3.1",
         "react-transition-group": "^4.4.5",
 
+        "@heroui/popover": "^2.3.17",
+
         "@mui/material": "6.4.3",
         "@mui/icons-material": "6.4.3",
         "@emotion/react": "^11.14.0",
