--- a/ReactWithDotNet/JsClientEngine/package.json
+++ b/ReactWithDotNet/JsClientEngine/package.json
@@ -16,8 +16,10 @@
         "react-dom": "^18.3.1",
         "react-transition-group": "^4.4.5",
 
+        "@heroui/checkbox": "^2.3.16",
         "@heroui/popover": "^2.3.17",
-        "@heroui/checkbox": "^2.3.17",
+        "@heroui/system": "^2.4.13",
+        "@heroui/theme": "^2.4.13",
 
         "@mui/material": "6.4.3",
         "@mui/icons-material": "6.4.3",
